# next

./: .gitignore  Caddyfile  README.md  compose.yaml  flake.nix  justfile
api/: Dockerfile.dev  rustfmt.toml  tarpaulin.toml
api/src/: lib.rs  main.rs
app/: .dockerignore  .gitignore  Dockerfile.dev  eslint.config.mjs  package.json  pnpm-lock.yaml  prettier.config.mjs  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.itest.config.ts  vitest.utest.config.ts
app/scripts/: coverage.ts
app/src/: index.test.tsx  index.tsx
ci/: just-recursively.fish
db/: flake.nix
db/migrations/: 20250416034042_add_content_blocks_table.sql  20250416045913_add_content_links_table.sql  20250507024217_add_navigators_table.sql  20250508235158_add_auth_sessions_table.sql  20250611023128_add_auth_permissions_table.sql  20250611025459_add_auth_roles_table.sql  20250611030418_add_auth_role_permissions_table.sql  20250611031243_add_auth_resource_roles_table.sql  20250611053355_add_auth_navigator_roles_table.sql  20250611053803_seed_content_block_permissions.sql  20250611054033_seed_admin_role.sql  20250709053422_add_owner_id_column.sql
dev/fish/: config.fish  fish_variables  flake.nix  justfile
dev/ghostty/: config  flake.nix  justfile
dev/git/: flake.nix  justfile
dev/gnupg/: flake.nix  justfile
dev/macos/: justfile  settings.fish
dev/neovim/: README.md  flake.nix  init.lua  justfile  lazy-lock.json
dev/tmux/: flake.nix  justfile  tmux.conf
lab/beets/: README.md  config.yaml  flake.nix  justfile  requirements.txt
lab/kmonad/: flake.nix
lib/rs/core/: Cargo.toml
lib/rs/core/src/: errors.rs  index.rs  lib.rs  main.rs  models.rs
lib/rs/core/src/api/: content.rs  mod.rs  models.rs  navigator.rs  state.rs
lib/rs/core/src/content/: service.rs
lib/rs/core/src/models/: block_content.rs  content_block.rs  content_context.rs  content_link.rs  fractional_index.rs  mod.rs  navigator.rs  nutty_id.rs  nutty_tag.rs  session.rs
lib/rs/core/src/navigator/: api.rs  repository.rs  service.rs
lib/rs/core/src/repository/: content.rs  memory.rs  mod.rs  navigator.rs  postgres.rs  repository.rs  tests.rs  traits.rs
lib/rs/core/src/services/: content.rs  mod.rs  navigator.rs
lib/rs/core/src/utilities/: repository.rs
lib/rs/core/src/utilities/api/: response.rs  session.rs
ops/: flake.nix  justfile
ops/certificates/: caddy.crt  (+1 more)
(+145 files in other folders)
