[package]
name = "nuttyverse-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework.
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1.44.1", features = [ "full" ] }

# Database.
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring-webpki", "chrono", "postgres", "json", "uuid" ] }

# Data handling.
chrono = { version = "0.4.40", features = [ "serde" ] }
regex = { version = "1.11.1" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0" }
uuid = { version = "1.16.0", features = [ "serde", "v7" ] }

# Error handling.
thiserror = { version = "2" }

# Testing.
proptest = { version = "1.4.0" }

[toolchain]
channel = "nightly"
